--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,12 +1,12 @@
 {
-  "printWidth": 80,
-  "tabWidth": 2,
+  "printWidth": 120,
+  "tabWidth": 4,
   "useTabs": false,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
+  "jsxBracketSameLine": true,
+  "arrowParens": "always",
   "proseWrap": "always"
 }
